Replace namespace auth token with API key
