# src/main/java/com/huawei/devbridge/relaycontroller/domain/service/JwtTokenService.java
@@ -6,6 +6,4 @@ import com.huawei.devbridge.relaycontroller.domain.model.Tunnel;
 
 public interface JwtTokenService {
     JwtToken issueToken(Tunnel tunnel, JwtScope scope);
-
-    JwtToken issueAuthToken(String namespace);
 }
