# src/main/java/com/huawei/devbridge/relaycontroller/interfaces/response/AuthTokenResponse.java
@@ -1,14 +1,0 @@
-package com.huawei.devbridge.relaycontroller.interfaces.response;
-
-import lombok.Builder;
-import lombok.Data;
-
-@Data
-@Builder
-public class AuthTokenResponse {
-    private String namespace;
-    private String scope;
-    private Long lifetime;
-    private Long expiration;
-    private String token;
-}
